--- a/pc/application/admin/view/exam/decide/edit.html
+++ b/pc/application/admin/view/exam/decide/edit.html
@@ -142,6 +142,11 @@
 				<li class="border morepadding">
 					<div class="desc">
 						<p>{$question['n']}. {$question['content']}</p>
+						{if condition="isset($question['attachment']) and ($question['attachment'] neq '')"}
+						<div>
+							<a href="{$question['attachment']}"><img src="{$question['attachment']}" alt="" style="max-height: 300px"></a>
+						</div>
+						{/if}
 					</div>
 				</li>
 				<li class="border morepadding">答题:
