--- a/pc/application/admin/view/question/multiple/edit.html
+++ b/pc/application/admin/view/question/multiple/edit.html
@@ -48,6 +48,18 @@
             <textarea id="c-content" data-rule="required" class="form-control editor" rows="5" name="row[content]" cols="50">{$row.content|htmlentities}</textarea>
         </div>
     </div>
+	<div class="form-group">
+	    <label class="control-label col-xs-12 col-sm-2">{:__("Attachment")}:</label>
+	    <div class="col-xs-12 col-sm-8">
+	        <input type="text" name="row[attachment]" id="c-attachment" class="form-control" value="{$row.attachment|htmlentities}"  readonly/>
+	    </div>
+	</div>
+	<div class="form-group">
+	    <label class="control-label col-xs-12 col-sm-2"></label>
+	    <div class="col-xs-12 col-sm-8">
+	        <button id="plupload-attachment" class="btn btn-danger plupload" data-multiple="false" data-input-id="c-attachment" ><i class="fa fa-upload"></i> {:__("Upload")}</button>
+	    </div>
+	</div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Answer')}:</label>
         <div class="col-xs-12 col-sm-8">
