修正部分启动考场失败的问题

--- a/pc/application/admin/view/exam/paper/edit.html
+++ b/pc/application/admin/view/exam/paper/edit.html
@@ -1,5 +1,6 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
-    <div class="form-group">
+    <input id="id" name="row[id]" type="hidden" value="{$row.id|htmlentities}" />
+	<div class="form-group">
        <label for="c-grade_id" class="control-label col-xs-12 col-sm-2">{:__('Grade_id')}:</label>
        <div class="col-xs-12 col-sm-8">
            {$gradeList}
